gcc/testsuite/rust/rustc/ui/issues/issue-28134.rs
// compile-flags: --test

#![test] // { dg-error "" "" { target *-*-* } }

